# MinecraftFromScratch

./: Cargo.toml
shaders/: shader.comp  shader.vert  shader.vert.spv
src/: game.rs  main.rs
src/command/: command_buffer.rs  command_pool.rs  mod.rs
src/core/: core.rs  debug.rs  instance.rs  logical_device.rs  mod.rs  swap_chain_support.rs
src/core/device/: device.rs  mod.rs  physical_device.rs  queue.rs  surface.rs  swap_chain_support.rs
src/game/: game.rs  mod.rs  window.rs
src/game/core/: core.rs  instance.rs  mod.rs  physical_device.rs  queue.rs
src/game/core/device/: debug.rs  device.rs  mod.rs  physical_device.rs  queue.rs
src/game/game_objects/: block.rs  camera.rs  game_objects.rs  key_event.rs  mod.rs
src/game/memory/: allocators.rs  buffers.rs  memory.rs  mod.rs
src/game/render_systems/: main_render_system.rs  mod.rs
src/game/render_systems/pipeline/: mod.rs  pipeline.rs  pipeline_config.rs
src/game/renderer/: command.rs  mod.rs  renderer.rs
src/game/renderer/command/: command.rs  command_pool.rs  mod.rs
src/game/renderer/render_systems/: main_render_system.rs  mod.rs
src/game/renderer/render_systems/pipeline/: mod.rs  pipeline.rs
src/game/renderer/swap_chain/: mod.rs  swap_chain.rs
src/memory/: allocators.rs  buffers.rs  descriptor.rs  image.rs  mod.rs
src/render_systems/: main_render_system.rs  mod.rs  render_system.rs
src/render_systems/pipeline/: mod.rs  pipeline.rs
src/renderer/: command.rs  mod.rs  swap_chain.rs
src/renderer/swap_chain/: swap_chain.rs
src/utils/: list.rs
