[package]
name = "minecraft_from_scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ash = {version = "0.37.0",features =["linked", "debug"]}
ash-window = "0.10.0"
winit = "0.26.1"
nalgebra-glm = "0.17.0"
num = "0.4.0"